* added target list  * added revolver turret  * added ammo system  * added heal item system  * added creative tab  * added packet system  * added turret spawn item  * added OP turret

--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -1,3 +1,8 @@
+item.sapturretmod:turretPlacer.name=Turret Item
+entity.sapturretmod.turretCrossbow.name=Crossbow Turret (T1)
+entity.sapturretmod.turretRevolver.name=Revolver Turret (T2)
+
+
 turret.desct1a=Turret which shoots arrows. It's relatively cheap, so it's ideal as your basic defense.
 turret.amtp0t1a=Arrows
 turret.desct1s=Turret which shoots pebbles. It has the same stats as the T1 turret, but makes the lowest damage. Ideal for hitting multiple targets at once.
