--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -1,12 +1,27 @@
 item.sapturretmod:turretPlacer.name=Turret Item
+item.sapturretmod:turretControlUnit.name.1=TCU (Turret Control Unit)
+item.sapturretmod:turretControlUnit.name.2=TCU (Turret Corrosion Unity)
+item.sapturretmod:turretControlUnit.name.3=TCU (Trigger Capacity Uranus)
+item.sapturretmod:turretControlUnit.name.4=TCU (Timmy Cleans Utilities)
+item.sapturretmod:turretControlUnit.name.5=TCU (Transient Collosal Uppercut)
+item.sapturretmod:turretUpgrade.name=Turret Upgrade
+item.sapturretmod:turretUpgrade.empty.name=Empty
+
 entity.sapturretmod.turretCrossbow.name=Crossbow Turret (T1)
 entity.sapturretmod.turretRevolver.name=Revolver Turret (T2)
 
-gui.sapturretmod.tcu.pageTargets.selectAll=Select All
-gui.sapturretmod.tcu.pageTargets.deselectAll=Deselect All
-gui.sapturretmod.tcu.pageTargets.selectMobs=Select Monster
-gui.sapturretmod.tcu.pageTargets.selectAnimals=Select Animals
-gui.sapturretmod.tcu.pageTargets.selectOther=Select Other
+gui.sapturretmod.tcu.page.info.title=TCU - Turret Info
+gui.sapturretmod.tcu.page.info.tab=Turret Info
+gui.sapturretmod.tcu.page.targets.title=TCU - Target Settings
+gui.sapturretmod.tcu.page.targets.tab=Target Settings
+gui.sapturretmod.tcu.page.targets.button.selectAll=Select All
+gui.sapturretmod.tcu.page.targets.button.deselectAll=Deselect All
+gui.sapturretmod.tcu.page.targets.button.selectMobs=Select Monster
+gui.sapturretmod.tcu.page.targets.button.selectAnimals=Select Animals
+gui.sapturretmod.tcu.page.targets.button.selectOther=Select Other
+gui.sapturretmod.tcu.page.upgrades.title=TCU - Upgrades
+gui.sapturretmod.tcu.page.upgrades.tab=Upgrades
+gui.sapturretmod.tcu.page.upgrades.button.ejectAll=Eject All Upgrades
 
 turret.desct1a=Turret which shoots arrows. It's relatively cheap, so it's ideal as your basic defense.
 turret.amtp0t1a=Arrows
