* removed unnecessary ITurretInfo interface  * upgrade list is now ordered  * creative tab is now ordered  * added tooltip info to upgrades  * reload time is now an entity attribute  * ammo capacity is now an entity attribute  * finished cooldown upgrade (may need renaming, though)

--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -5,7 +5,23 @@ item.sapturretmod:turretControlUnit.name.3=TCU (Trigger Capacity Uranus)
 item.sapturretmod:turretControlUnit.name.4=TCU (Timmy Cleans Utilities)
 item.sapturretmod:turretControlUnit.name.5=TCU (Transient Collosal Uppercut)
 item.sapturretmod:turretUpgrade.name=Turret Upgrade
+item.sapturretmod:turretUpgrade.requires=Requires:
+item.sapturretmod:turretUpgrade.applicableTo=Only Applicable On:
+item.sapturretmod:turretUpgrade.shdetails=<press shift to see details>
 item.sapturretmod:turretUpgrade.empty.name=Empty
+item.sapturretmod:turretUpgrade.empty.desc=Base for further upgrades.
+item.sapturretmod:turretUpgrade.healthUpgradeI.name=Health I
+item.sapturretmod:turretUpgrade.healthUpgradeI.desc=Increases the turret health by 25%.
+item.sapturretmod:turretUpgrade.healthUpgradeII.name=Health II
+item.sapturretmod:turretUpgrade.healthUpgradeII.desc=Increases the turret health by an additional 25% (50% overall).
+item.sapturretmod:turretUpgrade.healthUpgradeIII.name=Health III
+item.sapturretmod:turretUpgrade.healthUpgradeIII.desc=Increases the turret health by an additional 25% (75% overall).
+item.sapturretmod:turretUpgrade.healthUpgradeIV.name=Health IV
+item.sapturretmod:turretUpgrade.healthUpgradeIV.desc=Increases the turret health by an additional 25% (100% overall).
+item.sapturretmod:turretUpgrade.cooldownI.name=Cooldown I
+item.sapturretmod:turretUpgrade.cooldownI.desc=Decreases the reload time by 15%.
+item.sapturretmod:turretUpgrade.cooldownII.name=Cooldown II
+item.sapturretmod:turretUpgrade.cooldownII.desc=Decreases the reload time by an additional 35% (50% overall).
 
 entity.sapturretmod.turretCrossbow.name=Crossbow Turret (T1)
 entity.sapturretmod.turretRevolver.name=Revolver Turret (T2)
@@ -58,6 +74,7 @@ turret.desctsh=This is the medic under the turrets. It will heal nearby turrets 
 turret.amtp0tsh=Health Beam (Glistering Melon)
 turret.amtp1tsh=Health Beam (Golden Carrots)
 turret.amtp2tsh=Health Beam (Gold Nugget)
+
 upgrades.nameChest=Chest Grabber
 upgrades.descChest=Let your turret grab the content from chests with this upgrade! Put chests to the sides or below the turret, so that it can reach them.
 upgrades.nameControl=Control Seat
