--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -7,7 +7,7 @@ item.sapturretmod:turretControlUnit.name.5=TCU (Transient Collosal Uppercut)
 item.sapturretmod:turretUpgrade.name=Turret Upgrade
 item.sapturretmod:turretUpgrade.requires=Requires:
 item.sapturretmod:turretUpgrade.applicableTo=Only Applicable On:
-item.sapturretmod:turretUpgrade.shdetails=<press shift to see details>
+item.sapturretmod:turretUpgrade.shdetails=<Hold Shift>
 item.sapturretmod:turretUpgrade.empty.name=Empty
 item.sapturretmod:turretUpgrade.empty.desc=Base for further upgrades.
 item.sapturretmod:turretUpgrade.healthUpgradeI.name=Health I
