--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -3,13 +3,14 @@ item.sapturretmod:turretControlUnit.name.1=TCU (Turret Control Unit)
 item.sapturretmod:turretControlUnit.name.2=TCU (Turret Corrosion Unity)
 item.sapturretmod:turretControlUnit.name.3=TCU (Trigger Capacity Uranus)
 item.sapturretmod:turretControlUnit.name.4=TCU (Timmy Cleans Utilities)
-item.sapturretmod:turretControlUnit.name.5=TCU (Transient Collosal Uppercut)
+item.sapturretmod:turretControlUnit.name.5=TCU (Transient Colossal Uppercut)
+
 item.sapturretmod:turretUpgrade.name=Turret Upgrade
 item.sapturretmod:turretUpgrade.requires=Requires:
 item.sapturretmod:turretUpgrade.applicableTo=Only Applicable On:
 item.sapturretmod:turretUpgrade.shdetails=<Hold Shift>
 item.sapturretmod:turretUpgrade.empty.name=Empty
-item.sapturretmod:turretUpgrade.empty.desc=Base for further upgrades.
+item.sapturretmod:turretUpgrade.empty.desc=Base for further upgrades. Not applicable to anything.
 item.sapturretmod:turretUpgrade.healthUpgradeI.name=Health I
 item.sapturretmod:turretUpgrade.healthUpgradeI.desc=Increases the turret health by 25%.
 item.sapturretmod:turretUpgrade.healthUpgradeII.name=Health II
@@ -18,10 +19,18 @@ item.sapturretmod:turretUpgrade.healthUpgradeIII.name=Health III
 item.sapturretmod:turretUpgrade.healthUpgradeIII.desc=Increases the turret health by an additional 25% (75% overall).
 item.sapturretmod:turretUpgrade.healthUpgradeIV.name=Health IV
 item.sapturretmod:turretUpgrade.healthUpgradeIV.desc=Increases the turret health by an additional 25% (100% overall).
-item.sapturretmod:turretUpgrade.cooldownI.name=Cooldown I
-item.sapturretmod:turretUpgrade.cooldownI.desc=Decreases the reload time by 15%.
-item.sapturretmod:turretUpgrade.cooldownII.name=Cooldown II
-item.sapturretmod:turretUpgrade.cooldownII.desc=Decreases the reload time by an additional 35% (50% overall).
+item.sapturretmod:turretUpgrade.reloadI.name=Reload I
+item.sapturretmod:turretUpgrade.reloadI.desc=Decreases the reload time by 15%.
+item.sapturretmod:turretUpgrade.reloadII.name=Reload II
+item.sapturretmod:turretUpgrade.reloadII.desc=Decreases the reload time by an additional 35% (50% overall).
+item.sapturretmod:turretUpgrade.upgStorageI.name=Upgrade Storage I
+item.sapturretmod:turretUpgrade.upgStorageI.desc=Increases the available upgrade slots by 9.
+item.sapturretmod:turretUpgrade.upgStorageII.name=Upgrade Storage II
+item.sapturretmod:turretUpgrade.upgStorageII.desc=Increases the available upgrade slots by 9.
+item.sapturretmod:turretUpgrade.upgStorageIII.name=Upgrade Storage III
+item.sapturretmod:turretUpgrade.upgStorageIII.desc=Increases the available upgrade slots by 9.
+item.sapturretmod:turretUpgrade.ammoStorage.name=Ammunition Storage
+item.sapturretmod:turretUpgrade.ammoStorage.desc=Increases the available ammo storage by 320 units.
 
 entity.sapturretmod.turretCrossbow.name=Crossbow Turret (T1)
 entity.sapturretmod.turretRevolver.name=Revolver Turret (T2)
