--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -1,36 +1,36 @@
-item.sapturretmod:turretPlacer.name=Turret Item
-item.sapturretmod:turretControlUnit.name.1=TCU (Turret Control Unit)
-item.sapturretmod:turretControlUnit.name.2=TCU (Turret Corrosion Unity)
-item.sapturretmod:turretControlUnit.name.3=TCU (Trigger Capacity Uranus)
-item.sapturretmod:turretControlUnit.name.4=TCU (Timmy Cleans Utilities)
-item.sapturretmod:turretControlUnit.name.5=TCU (Transient Colossal Uppercut)
+item.sapturretmod:turret_placer.name=Turret Item
+item.sapturretmod:turret_control_unit.name.1=TCU (Turret Control Unit)
+item.sapturretmod:turret_control_unit.name.2=TCU (Turret Corrosion Unity)
+item.sapturretmod:turret_control_unit.name.3=TCU (Trigger Capacity Uranus)
+item.sapturretmod:turret_control_unit.name.4=TCU (Timmy Cleans Utilities)
+item.sapturretmod:turret_control_unit.name.5=TCU (Transient Colossal Uppercut)
 
-item.sapturretmod:turretUpgrade.name=Turret Upgrade
-item.sapturretmod:turretUpgrade.requires=Requires:
-item.sapturretmod:turretUpgrade.applicableTo=Only Applicable On:
-item.sapturretmod:turretUpgrade.shdetails=<Hold Shift>
-item.sapturretmod:turretUpgrade.empty.name=Empty
-item.sapturretmod:turretUpgrade.empty.desc=Base for further upgrades. Not applicable to anything.
-item.sapturretmod:turretUpgrade.healthUpgradeI.name=Health I
-item.sapturretmod:turretUpgrade.healthUpgradeI.desc=Increases the turret health by 25%.
-item.sapturretmod:turretUpgrade.healthUpgradeII.name=Health II
-item.sapturretmod:turretUpgrade.healthUpgradeII.desc=Increases the turret health by an additional 25% (50% overall).
-item.sapturretmod:turretUpgrade.healthUpgradeIII.name=Health III
-item.sapturretmod:turretUpgrade.healthUpgradeIII.desc=Increases the turret health by an additional 25% (75% overall).
-item.sapturretmod:turretUpgrade.healthUpgradeIV.name=Health IV
-item.sapturretmod:turretUpgrade.healthUpgradeIV.desc=Increases the turret health by an additional 25% (100% overall).
-item.sapturretmod:turretUpgrade.reloadI.name=Reload I
-item.sapturretmod:turretUpgrade.reloadI.desc=Decreases the reload time by 15%.
-item.sapturretmod:turretUpgrade.reloadII.name=Reload II
-item.sapturretmod:turretUpgrade.reloadII.desc=Decreases the reload time by an additional 35% (50% overall).
-item.sapturretmod:turretUpgrade.upgStorageI.name=Upgrade Storage I
-item.sapturretmod:turretUpgrade.upgStorageI.desc=Increases the available upgrade slots by 9.
-item.sapturretmod:turretUpgrade.upgStorageII.name=Upgrade Storage II
-item.sapturretmod:turretUpgrade.upgStorageII.desc=Increases the available upgrade slots by 9.
-item.sapturretmod:turretUpgrade.upgStorageIII.name=Upgrade Storage III
-item.sapturretmod:turretUpgrade.upgStorageIII.desc=Increases the available upgrade slots by 9.
-item.sapturretmod:turretUpgrade.ammoStorage.name=Ammunition Storage
-item.sapturretmod:turretUpgrade.ammoStorage.desc=Increases the available ammo storage by 320 units.
+item.sapturretmod:turret_upgrade.name=Turret Upgrade
+item.sapturretmod:turret_upgrade.requires=Requires:
+item.sapturretmod:turret_upgrade.applicableTo=Only Applicable On:
+item.sapturretmod:turret_upgrade.shdetails=<Hold Shift>
+item.sapturretmod:turret_upgrade.empty.name=Empty
+item.sapturretmod:turret_upgrade.empty.desc=Base for further upgrades. Not applicable to anything.
+item.sapturretmod:turret_upgrade.healthUpgradeI.name=Health I
+item.sapturretmod:turret_upgrade.healthUpgradeI.desc=Increases the turret health by 25%.
+item.sapturretmod:turret_upgrade.healthUpgradeII.name=Health II
+item.sapturretmod:turret_upgrade.healthUpgradeII.desc=Increases the turret health by an additional 25% (50% overall).
+item.sapturretmod:turret_upgrade.healthUpgradeIII.name=Health III
+item.sapturretmod:turret_upgrade.healthUpgradeIII.desc=Increases the turret health by an additional 25% (75% overall).
+item.sapturretmod:turret_upgrade.healthUpgradeIV.name=Health IV
+item.sapturretmod:turret_upgrade.healthUpgradeIV.desc=Increases the turret health by an additional 25% (100% overall).
+item.sapturretmod:turret_upgrade.reloadI.name=Reload I
+item.sapturretmod:turret_upgrade.reloadI.desc=Decreases the reload time by 15%.
+item.sapturretmod:turret_upgrade.reloadII.name=Reload II
+item.sapturretmod:turret_upgrade.reloadII.desc=Decreases the reload time by an additional 35% (50% overall).
+item.sapturretmod:turret_upgrade.upgStorageI.name=Upgrade Storage I
+item.sapturretmod:turret_upgrade.upgStorageI.desc=Increases the available upgrade slots by 9.
+item.sapturretmod:turret_upgrade.upgStorageII.name=Upgrade Storage II
+item.sapturretmod:turret_upgrade.upgStorageII.desc=Increases the available upgrade slots by 9.
+item.sapturretmod:turret_upgrade.upgStorageIII.name=Upgrade Storage III
+item.sapturretmod:turret_upgrade.upgStorageIII.desc=Increases the available upgrade slots by 9.
+item.sapturretmod:turret_upgrade.ammoStorage.name=Ammunition Storage
+item.sapturretmod:turret_upgrade.ammoStorage.desc=Increases the available ammo storage by 320 units.
 
 entity.sapturretmod.turretCrossbow.name=Crossbow Turret (T1)
 entity.sapturretmod.turretRevolver.name=Revolver Turret (T2)
