* assembly stuff:  - added automation  - now upgradeable (only automation for now, speed as a possible upgrade)  - the item crafted now "fades in" on the tablet instead of just showing it immediately during operation (support of glBlendColor required!)  - added cancel button, items used for the current crafting operation will be lost  - items from output and upgrades won't be synced whilst the GUI is open to prevent flickering  - recipe list now scrollable  - ingredients now taken from back to forth (from last to first slot) to maintain "order" in the inventory * optimized imports

--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -42,6 +42,9 @@ gui.sapturretmod.tcu.page.targetsPlayer.tab=Player Target Settings
 gui.sapturretmod.tcu.page.upgrades.title=TCU - Upgrades
 gui.sapturretmod.tcu.page.upgrades.tab=Upgrades
 gui.sapturretmod.tcu.page.upgrades.button.ejectAll=Eject All Upgrades
+gui.sapturretmod.tassembly.cancel=Cancel
+gui.sapturretmod.tassembly.automate.enable=Automate
+gui.sapturretmod.tassembly.automate.disable=Manual
 
 
 
