* made potato generator fully functional (rename to electrolyte generator pending)  * begun work on the turret info GUI.    - categories will be similar to the Lexica Botania (with very similar, fancy shader stuff)

--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -86,6 +86,8 @@ gui.sapturretmod.tassembly.cancel=Cancel
 gui.sapturretmod.tassembly.automate.enable=Automate
 gui.sapturretmod.tassembly.automate.disable=Manual
 
+gui.sapturretmod.electrogen.effective=Effectiveness:
+gui.sapturretmod.electrogen.powergen=Power generated:
 
 
 
