--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -57,6 +57,7 @@ item.sapturretmod:turret_upgrade.ammo_storage.name=Ammunition Storage
 item.sapturretmod:turret_upgrade.ammo_storage.desc=Increases the available ammo storage by 320 units.
 
 entity.sapturretmod.turret_crossbow.name=Crossbow Turret (T1)
+entity.sapturretmod.turret_crossbow.desc=Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 entity.sapturretmod.turret_revolver.name=Revolver Turret (T2)
 
 tinfo.turret.desc.turret_crossbow=Turret which shoots arrows. It's relatively cheap, so it's ideal as your basic defense.
