made the crafting pattern of the workbench-craftable info entries smaller

--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -80,7 +80,8 @@ gui.sapturretmod.tinfo.health=Health
 gui.sapturretmod.tinfo.range=Range
 gui.sapturretmod.tinfo.ammocap=Ammo Capacity
 gui.sapturretmod.tinfo.ammouse=Ammo Useable
-gui.sapturretmod.tinfo.crafting=Assembly Crafting
+gui.sapturretmod.tinfo.crafting=Assembly Recipe Items
+gui.sapturretmod.tinfo.workbench=Crafting Table Recipe
 gui.sapturretmod.tinfo.dps=Damage Per Projectile
 gui.sapturretmod.tinfo.turret=Turret Applicable
 gui.sapturretmod.tinfo.rounds=Rounds Provided
