--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -1,4 +1,3 @@
-# assembly table
 tile.sapturretmod:turret_assembly.name=Turret Assembly Table
 tile.sapturretmod:turret_assembly.group0=Misc Stuff
 tile.sapturretmod:turret_assembly.group1=Turrets
@@ -6,7 +5,6 @@ tile.sapturretmod:turret_assembly.group2=Ammunition
 tile.sapturretmod:turret_assembly.group3=Repair Kits
 tile.sapturretmod:turret_assembly.group4=Upgrades
 tile.sapturretmod:turret_assembly.desc=This assembly table is an essential part for your turret cravings, as it §3crafts§0 any item and turret you need or want.\n\nTo operate it you need §3power§0 as well as the items required for the item you want to craft. It currently only accepts §3Redstone Flux§0 as energy.\n\nIf you think it's too slow or you want to automate it, there are a couple of §3upgrades§0 available.
-# potato generator
 tile.sapturretmod:potato_generator.name=Electrolyte Generator
 tile.sapturretmod:potato_generator.desc=This machine §3creates energy§0 from items (mostly food) with high enough acid or base by reacting with the electrolyte within them.\nThe more items are put in it, the higher the efficiency of the generator.\n\nEach item has its own §3effectiveness§0 and §3decay time§0, which dictate how much power can be generated in total. The effectiveness level also influences the amount of power the generator can produce in a moment, but there is only so much the generator can transfer internally, so there is a §3cap of 200 RF/t§0.\n\nItems used up in the generator may produce §3byproducts§0, which could be §2trash§0 or rarely something §dvaluable§0.
 
@@ -15,24 +13,34 @@ item.sapturretmod:turret_info.desc=Gives information about the\nitems in the Tur
 item.sapturretmod:turret_placer.name=Defense Turret
 item.sapturretmod:turret_placer.turret_name=Name: %s
 item.sapturretmod:turret_placer.health=Health: %.1f HP
+item.sapturretmod:turret_control_unit.name=Turret Control Unit
 item.sapturretmod:turret_control_unit.name.1=TCU (Turret Control Unit)
 item.sapturretmod:turret_control_unit.name.2=TCU (Turret Corrosion Unity)
 item.sapturretmod:turret_control_unit.name.3=TCU (Trigger Capacity Uranus)
 item.sapturretmod:turret_control_unit.name.4=TCU (Timmy Cleans Utilities)
 item.sapturretmod:turret_control_unit.name.5=TCU (Transient Colossal Uppercut)
+item.sapturretmod:turret_control_unit.desc=This item is a §3configuration and info tool§0 for placed turrets and one of the essentials.\n\nLooking at a turret with this tool in hand shows an §3info label§0 above the turret with information about its name, health and ammo.\n\nRight-Clicking a turret with it will open a §3GUI§0 that lets you see detailed info and configure the turret, like targets and upgrades.
 item.sapturretmod:turret_assembly_auto.name=Automation Upgrade
-item.sapturretmod:turret_assembly_auto.desc=Used in the Turret Assembly Table
+item.sapturretmod:turret_assembly_auto.ttip=Used in the Turret Assembly Table
+item.sapturretmod:turret_assembly_auto.desc=This enables automation of the assembly table. Once this is applied, a button will appear where you can toggle the assembly table between manual and automation mode.\n\nIn manual mode it will act like you're used to, crafting items on your command.\n\nIn automation mode, you can tell it to craft a specific item. Once the items and the power are sufficiently available, it'll start crafting and keep crafting it until it runs out of ingredients, energy or space in the output.\nYou cannot change the item crafted until you cancel it.
 item.sapturretmod:turret_assembly_speed.name=Speed Upgrade
-item.sapturretmod:turret_assembly_speed.desc=Used in the Turret Assembly Table
+item.sapturretmod:turret_assembly_speed.ttip=Used in the Turret Assembly Table
+item.sapturretmod:turret_assembly_speed.desc=This optimizes the assembly process and makes the assembly table 4x faster. Since this optimization isn't free to come by, it'll increase the energy consumption of the current crafting operation by 10%.
 item.sapturretmod:turret_assembly_filter.name=Filter Upgrade
-item.sapturretmod:turret_assembly_filter.desc=Used in the Turret Assembly Table
+item.sapturretmod:turret_assembly_filter.ttip=Used in the Turret Assembly Table
+item.sapturretmod:turret_assembly_filter.desc=With this upgrade you can §3filter§0 what's gointg into the assembly table.\nAfter §3right-clicking§0 you can configure the filter. In empty slots can go anything. In configured slots can only go the item configured (obviously), but those items §3won't go anywhere else§0, not even in empty configured slots.\n§3Shift-right-click§0 clears the filter.\n\nThe filter operates not only on the user-side of things (putting stuff into the table via GUI) but also with external insertion devices like the hopper.\n\nPlease note that you can't configure the stack size of items, thus it will always try to put a §3whole stack§0 in a slot. \n\nf you want to put in more than 1 stack into the table, it's advised to configure 2 or more slots with the same item.
 item.sapturretmod:turret_assembly_filter.conf=Configured
 item.sapturretmod:turret_assembly_filter.inst=Right-click to configure, Shift-right-click to clear config.
-
 item.sapturretmod:turret_ammo.arrow_sng.name=Arrow Bolt
 item.sapturretmod:turret_ammo.arrow_lrg.name=Arrow Bolt Pack
 item.sapturretmod:turret_ammo.sgshell_sng.name=Shotgun Shell
 item.sapturretmod:turret_ammo.sgshell_lrg.name=Shotgun Shell Pack
+item.sapturretmod:turret_ammo.cryocell_1.name=Cryo Cell SG1
+item.sapturretmod:turret_ammo.cryocell_pack_1.name=Cryo Cell SN1 Pack
+item.sapturretmod:turret_ammo.cryocell_2.name=Cryo Cell SG2
+item.sapturretmod:turret_ammo.cryocell_pack_2.name=Cryo Cell SN2 Pack
+item.sapturretmod:turret_ammo.cryocell_3.name=Cryo Cell SG3
+item.sapturretmod:turret_ammo.cryocell_pack_3.name=Cryo Cell SN3 Pack
 
 item.sapturretmod:turret_repair_kit.standard_1.name=Repair Kit 05HS
 item.sapturretmod:turret_repair_kit.standard_2.name=Repair Kit 10HS
@@ -63,17 +71,23 @@ item.sapturretmod:turret_upgrade.upg_storage_iii.name=Upgrade Storage III
 item.sapturretmod:turret_upgrade.upg_storage_iii.desc=Increases the available §3upgrade slots by 9§0 for maximum upgradeability.
 item.sapturretmod:turret_upgrade.ammo_storage.name=Ammunition Storage
 item.sapturretmod:turret_upgrade.ammo_storage.desc=If you're tired of your turrets running out of ammo too fast, this will increases the available §3ammo storage by 320 rounds§0.
+item.sapturretmod:turret_upgrade.smart_tgt.name=Smart Targeting
+item.sapturretmod:turret_upgrade.smart_tgt.desc=Essentially, this upgrade makes turrets aware of the targets from others and not targeting those for themselves.\nTurrets within the range of the turret holding this upgrade will be accounted for.
 
 entity.sapturretmod.turret_i_crossbow.name=Crossbow Turret (T1)
 entity.sapturretmod.turret_i_crossbow.desc=A turret meant for basic defense and beginners. Not very strong but one of the cheapest to make.
 entity.sapturretmod.turret_i_shotgun.name=Shotgun Turret (T1)
 entity.sapturretmod.turret_i_shotgun.desc=A turret meant for basic crowd control. Very weak but can hit §3multiple targets§0 at once, due to its ammo dispersing into multiple projectiles.
+entity.sapturretmod.turret_i_snowball.name=Cryolator Turret (T1)
+entity.sapturretmod.turret_i_snowball.desc=This turret is of the §3supporting§0 kind, as its not dealing any damage, but will §3slow down§0 any target that it hits. It'll only attack a target if it's not already slowed down, though.
 entity.sapturretmod.turret_ii_revolver.name=Revolver Turret (T2)
 
 sapturretmod.tinfo.ammo.arrow.name=Arrow Bolt
-sapturretmod.tinfo.ammo.arrow.desc=The standard ammo for the §3Crossbow Turret§0. Has a tiny knockback effect and acts like a standard arrow, just smaller. Very precise.\nCan be packaged, whose items will provide 16x ammo.
+sapturretmod.tinfo.ammo.arrow.desc=The standard ammo for the §3Crossbow Turret§0. Has a tiny knockback effect and acts like a standard arrow, just smaller. Very precise.\n\nCan be packaged, whose items will provide 16x ammo.
 sapturretmod.tinfo.ammo.sgshell.name=Shotgun Shell
-sapturretmod.tinfo.ammo.sgshell.desc=The standard ammo for the §3Shotgun Turret§0. Has no knockback effect and turns into 6 dispersed pebble projectiles when shot.\nDoes not apply any immunity to the target, thus targets hit by multiple pebbles will take damage from all of them.\nCan be packaged, whose items will provide 16x ammo.
+sapturretmod.tinfo.ammo.sgshell.desc=The standard ammo for the §3Shotgun Turret§0. Has no knockback effect and turns into 6 dispersed pebble projectiles when shot.\nDoes not apply any immunity to the target, thus targets hit by multiple pebbles will take damage from all of them.\n\nCan be packaged, whose items will provide 16x ammo.
+sapturretmod.tinfo.ammo.cryocell.name=Cryo Cell
+sapturretmod.tinfo.ammo.cryocell.desc=This ammunition used by the §3Cryolator Turret§0 comes in 3 versions, which applies different slowness effects:\n§3Cell SG1§0: Slowness II for 15s\n§3Cell SG2§0: Slowness IV for 10s\n§3Cell SG3§0: Slowness VI for 5s.\n\nDoes not apply immunity and any damage to the target.\n\nCan be packaged, whose items will provide 16x ammo.
 
 gui.sapturretmod.tinfo.infoTitle=Info about this mod
 gui.sapturretmod.tinfo.health=Health
