* removed GuiIconTab, as it is replaced with GuiItemTab  * removed old AGuiTurretControlUnit file  * replaced StatCollector with Lang class in codebase

--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -135,6 +135,8 @@ gui.sapturretmod.tcu.page.upgrades.button.ejectAll=Eject All Upgrades
 gui.sapturretmod.tassembly.cancel=Cancel
 gui.sapturretmod.tassembly.automate.enable=Automate
 gui.sapturretmod.tassembly.automate.disable=Manual
+gui.sapturretmod.tassembly.crafting=Crafting:
+gui.sapturretmod.tassembly.rfUsing=using %d RF/t
 
 gui.sapturretmod.electrogen.effective=Effectiveness:
 gui.sapturretmod.electrogen.powergen=Power generated:
