--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -43,6 +43,8 @@ item.sapturretmod:turret_ammo.cryocell_3.name=Cryo Cell SG3
 item.sapturretmod:turret_ammo.cryocell_pack_3.name=Cryo Cell SN3 Pack
 item.sapturretmod:turret_ammo.bullet_sng.name=Revolver Bullets
 item.sapturretmod:turret_ammo.bullet_lrg.name=Revolver Bullet Pack
+item.sapturretmod:turret_ammo.mgshell_sng.name=Minigun Rounds
+item.sapturretmod:turret_ammo.mgshell_lrg.name=Minigun Rounds Pack
 
 item.sapturretmod:turret_repair_kit.standard_1.name=Repair Kit 05HS
 item.sapturretmod:turret_repair_kit.standard_2.name=Repair Kit 10HS
@@ -54,17 +56,17 @@ item.sapturretmod:turret_upgrade.name=Turret Upgrade
 item.sapturretmod:turret_upgrade.empty.name=Empty
 item.sapturretmod:turret_upgrade.empty.desc=This is the §3crafting base§0 for all other upgrades. Not applicable to anything.
 item.sapturretmod:turret_upgrade.health_i.name=Health I
-item.sapturretmod:turret_upgrade.health_i.desc=Increases the maximum turret §3health by 25%§0.\nIt will not increase the turrets health automatically! You must heal it afterwards.
+item.sapturretmod:turret_upgrade.health_i.desc=Increases the maximum turret §3health by 25%%§0.\nIt will not increase the turrets health automatically! You must heal it afterwards.
 item.sapturretmod:turret_upgrade.health_ii.name=Health II
-item.sapturretmod:turret_upgrade.health_ii.desc=Increases the maximum turret §3health by 25%§0 for 50% total increase.
+item.sapturretmod:turret_upgrade.health_ii.desc=Increases the maximum turret §3health by 25%%§0 for 50%% total increase.
 item.sapturretmod:turret_upgrade.health_iii.name=Health III
-item.sapturretmod:turret_upgrade.health_iii.desc=Increases the maximum turret §3health by 25%§0 for 75% total increase.
+item.sapturretmod:turret_upgrade.health_iii.desc=Increases the maximum turret §3health by 25%%§0 for 75%% total increase.
 item.sapturretmod:turret_upgrade.health_iv.name=Health IV
-item.sapturretmod:turret_upgrade.health_iv.desc=Increases the maximum turret §3health by 25%§0 for 100% total increase.
+item.sapturretmod:turret_upgrade.health_iv.desc=Increases the maximum turret §3health by 25%%§0 for 100%% total increase.
 item.sapturretmod:turret_upgrade.reload_i.name=Reload I
-item.sapturretmod:turret_upgrade.reload_i.desc=When the turret shoots too slow, use this! It decreases the §3reload time by 15%§0.\nBe careful with faster shooting turrets, the immunity time caused by damage on targets may last longer than the time to reload, thus wasting ammunition.
+item.sapturretmod:turret_upgrade.reload_i.desc=When the turret shoots too slow, use this! It decreases the §3reload time by 15%%§0.\nBe careful with faster shooting turrets, the immunity time caused by damage on targets may last longer than the time to reload, thus wasting ammunition.
 item.sapturretmod:turret_upgrade.reload_ii.name=Reload II
-item.sapturretmod:turret_upgrade.reload_ii.desc=This decreases the §3reload time§0 by an additional §335%§0 (50% overall) for an even faster shooting turret.
+item.sapturretmod:turret_upgrade.reload_ii.desc=This decreases the §3reload time§0 by an additional §335%%§0 (50% overall) for an even faster shooting turret.
 item.sapturretmod:turret_upgrade.upg_storage_i.name=Upgrade Storage I
 item.sapturretmod:turret_upgrade.upg_storage_i.desc=Need more upgrades for your turret but don't have any space? Use this, as it will increases the available §3upgrade slots by 9§0.
 item.sapturretmod:turret_upgrade.upg_storage_ii.name=Upgrade Storage II
@@ -76,12 +78,11 @@ item.sapturretmod:turret_upgrade.ammo_storage.desc=If you're tired of your turre
 item.sapturretmod:turret_upgrade.smart_tgt.name=Smart Targeting
 item.sapturretmod:turret_upgrade.smart_tgt.desc=Essentially, this upgrade makes turrets aware of the targets from others and not targeting those for themselves.\nTurrets within the range of the turret holding this upgrade will be accounted for.
 item.sapturretmod:turret_upgrade.use_decr_i.name=Economy I
-item.sapturretmod:turret_upgrade.use_decr_i.desc=If you think ammo is too expensive to make, then this upgrade will help you out! A turret with this upgrade has a chance of 10% of not consuming ammo (so on average, it uses 10% less ammo).
+item.sapturretmod:turret_upgrade.use_decr_i.desc=If you think ammo is too expensive to make, then this upgrade will help you out! A turret with this upgrade has a chance of 10%% of not consuming ammo (so on average, it uses 10%% less ammo).
 item.sapturretmod:turret_upgrade.use_decr_ii.name=Economy II
-item.sapturretmod:turret_upgrade.use_decr_ii.desc=Like its required upgrade, this lets turrets preserve ammo. This increases the chance of doing so to 35% .
+item.sapturretmod:turret_upgrade.use_decr_ii.desc=Like its required upgrade, this lets turrets preserve ammo. This increases the chance of doing so to 35%% .
 item.sapturretmod:turret_upgrade.use_decr_inf.name=Infinitas Oeconomia
 item.sapturretmod:turret_upgrade.use_decr_inf.desc=You want unlimited ammo? This upgrade recreates ammo automatically and infinitely, so you'll never run out of it! There's a catch though: The turret must be filled to the max with rounds, or otherwise it will resort to the other Economy upgrades to reduce ammo usage.
-
 
 entity.sapturretmod.turret_i_crossbow.name=Crossbow Turret (T1)
 entity.sapturretmod.turret_i_crossbow.desc=A turret meant for basic defense and beginners. Not very strong but one of the cheapest to make.
@@ -91,6 +92,8 @@ entity.sapturretmod.turret_i_snowball.name=Cryolator Turret (T1)
 entity.sapturretmod.turret_i_snowball.desc=This turret is of the §3supporting§0 kind, as its not dealing any damage, but will §3slow down§0 any target that it hits. It'll only attack a target if it's not already slowed down, though.
 entity.sapturretmod.turret_ii_revolver.name=Revolver Turret (T2)
 entity.sapturretmod.turret_ii_revolver.desc=This turret can be seen as the upgraded version of the Crossbow Turret, as it has more range, greater health and deals more damage, although with less knockback effect.
+entity.sapturretmod.turret_ii_minigun.name=Minigun Turret (T2)
+entity.sapturretmod.turret_ii_minigun.desc=This turret deals low amounts of damage per projectile, but compensates for it with a rapid firing rate. Due to its high output, and since its shooting compartments aren't directly inside the head, it can store double the amount of rounds (512).
 
 sapturretmod.tinfo.ammo.arrow.name=Arrow Bolt
 sapturretmod.tinfo.ammo.arrow.desc=The standard ammo for the §3Crossbow Turret§0. Has a tiny knockback effect and acts like a standard arrow, just smaller. Very precise.\n\nCan be packaged, whose items will provide 16x ammo.
@@ -100,6 +103,8 @@ sapturretmod.tinfo.ammo.cryocell.name=Cryo Cell
 sapturretmod.tinfo.ammo.cryocell.desc=This ammunition used by the §3Cryolator Turret§0 comes in 3 versions, which applies different slowness effects:\n§3Cell SG1§0: Slowness I for 15s\n§3Cell SG2§0: Slowness III for 10s\n§3Cell SG3§0: Slowness V for 5s.\n\nDoes not apply immunity and any damage to the target.\n\nCan be packaged, whose items will provide 16x ammo.
 sapturretmod.tinfo.ammo.bullet.name=Revolver Bullets
 sapturretmod.tinfo.ammo.bullet.desc=Used by the §3Revolver Turret§0, it has the same knockback effect like the Shotgun projectiles, but do more damage than the Arrow bolts from the Crossbow Turret. Unlike other ammo types, this provides double the rounds.
+sapturretmod.tinfo.ammo.mgshell.name=Minigun Rounds
+sapturretmod.tinfo.ammo.mgshell.desc=This ammo contains seeds, which are used by the §3Minigun Turret§0. On their own they do little damage and no knockback, but like the shotgun pebbles, they do not apply any immunity to the target. This, in combination with the rapid firing rate of the turret, compensate for their weakness.
 
 gui.sapturretmod.tinfo.infoTitle=Info about this mod
 gui.sapturretmod.tinfo.category.turrets.name=Turrets
@@ -111,7 +116,7 @@ gui.sapturretmod.tinfo.health=Health
 gui.sapturretmod.tinfo.range=Range
 gui.sapturretmod.tinfo.ammocap=Ammo Capacity
 gui.sapturretmod.tinfo.ammouse=Ammo Useable
-gui.sapturretmod.tinfo.crafting=Assembly Recipe Items
+gui.sapturretmod.tinfo.crafting=Assembly Recipe
 gui.sapturretmod.tinfo.workbench=Crafting Table Recipe
 gui.sapturretmod.tinfo.dps=Damage Per Projectile
 gui.sapturretmod.tinfo.turret=Turret Applicable
